--- a/style.css
+++ b/style.css
@@ -21,12 +21,17 @@ body {
     transform: translate(-50%, -50%);
 }
 
-img {
-    width: 336px;
-    height: 200px;
-    border-radius: 10px;
+.image-container {
     margin-left: 24px;
     margin-right: 24px;
+    width: 336px;
+    height: 200px;
+}
+
+img {
+    border-radius: 10px; 
+    width: 100%;
+    display: block; 
 }
 
 .content-container {
@@ -113,7 +118,7 @@ img {
     }
 
     .image-container {
-        width: 279px; 
+        /* width: 279px;  */
         margin-left: 24px;
         margin-right: 24px;
         
